<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimary"
    android:padding="16dp"
    tools:context=".AddEditBook">

    <EditText
        android:id="@+id/edit_text_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/book_title"
        android:inputType="text"/>

    <EditText
        android:id="@+id/edit_text_author"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/author_s_name"
        android:inputType="text"/>

    <EditText
        android:id="@+id/edit_text_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/description"
        android:inputType="textMultiLine"/>

    <EditText
        android:id="@+id/edit_text_category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/categories"
        android:inputType="text"/>

    <EditText
        android:id="@+id/edit_text_quantity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/quantity"
        android:inputType="number"/>


</LinearLayout>