<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:layout_marginEnd="8dp"

    android:layout_marginStart="8dp"
    android:layout_marginTop="8dp">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:padding="8dp">

        <TextView
            android:id="@+id/text_quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/White"
            android:layout_alignParentEnd="true"
            android:text="@string/_10"/>

        <TextView
            android:id="@+id/text_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/book_titlec"
            android:textColor="@color/White"
            android:maxLines="1"
            android:layout_toStartOf="@id/text_quantity"
            android:layout_alignParentStart="true"/>

        <TextView
            android:id="@+id/text_author"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/White"
            android:layout_below="@id/text_title"
            android:text="@string/book_authorc"/>

        <TextView
            android:id="@+id/text_description"
            android:layout_width="wrap_content"
            android:textColor="@color/White"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_author"
            android:text="@string/descriptionc"/>

        <TextView
            android:id="@+id/text_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_description"
            android:layout_alignParentEnd="true"
            android:textColor="@color/White"
            android:text="@string/category"/>

    </RelativeLayout>

</androidx.cardview.widget.CardView>
