<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimary"
    android:layout_gravity="center"
    tools:context=".LibrarianSignUp">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="300dp"
        android:layout_height="180dp"
        android:layout_marginTop="70dp"
        android:layout_marginBottom="8dp"
        app:srcCompat="@drawable/centennial_library"
        android:layout_gravity="center"/>

    <EditText
        android:id="@+id/lib_id"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/id"
        android:inputType="number"
        android:layout_gravity="center"/>

    <EditText
        android:id="@+id/lib_firstName"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:ems="10"
        android:hint="@string/first_name"
        android:inputType="text"
        android:layout_gravity="center"/>

    <EditText
        android:id="@+id/lib_lastName"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:ems="10"
        android:hint="@string/last_name"
        android:inputType="text"
        android:layout_gravity="center"/>

    <EditText
        android:id="@+id/lib_pass"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:ems="10"
        android:hint="@string/passwordlib"
        android:inputType="textPassword"
        android:layout_gravity="center"/>

    <Button
        android:id="@+id/create_librarian"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:textColor="@color/White"
        android:padding="15dp"
        android:text="@string/create_an_account"
        android:layout_gravity="center"/>

</LinearLayout>