<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/colorPrimary"
    android:layout_height="match_parent"
    tools:context=".StudentProfile">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:background="@color/colorPrimaryDark"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/profile_id"
            android:padding="5dp"
            android:textSize="24sp"
            android:textColor="@color/White"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/student_idp" />

        <TextView
            android:id="@+id/profile_first"
            android:padding="5dp"
            android:textSize="24sp"
            android:textColor="@color/White"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/first_name" />

        <TextView
            android:id="@+id/profile_last"
            android:padding="5dp"
            android:textSize="24sp"
            android:textColor="@color/White"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/last_name"/>

        <TextView
            android:id="@+id/profile_bookiD"
            android:padding="5dp"
            android:textSize="24sp"
            android:textColor="@color/White"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bookid" />

        <TextView
            android:id="@+id/profile_bookName"
            android:padding="5dp"
            android:textSize="24sp"
            android:textColor="@color/White"
            android:autoSizeTextType="uniform"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bookname" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>