<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/AppTheme"
    android:background="@color/colorPrimary"
    tools:context=".BorrowBook">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="148dp"
        android:gravity="center"
        android:padding="10dp"
        android:background="@color/colorAccent"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/borrow_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/book_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autoSizeTextType="uniform"
            android:textColor="@color/White"
            android:text="@string/book_name"
            android:textAlignment="center"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/book_author"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autoSizeTextType="uniform"
            android:textColor="@color/White"
            android:text="@string/book_author"
            android:textSize="26sp" />

        <TextView
            android:id="@+id/book_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autoSizeTextType="uniform"
            android:textColor="@color/White"
            android:text="@string/book_description"
            android:textAlignment="center"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/book_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autoSizeTextType="uniform"
            android:textColor="@color/White"
            android:text="@string/book_category"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/book_quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autoSizeTextType="uniform"
            android:textColor="@color/White"
            android:text="@string/book_quantity"
            android:textSize="18sp" />

    </LinearLayout>

    <Button
        android:id="@+id/borrow_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:layout_marginBottom="284dp"
        android:text="@string/borrow_this_book"
        android:background="@color/colorAccent"
        android:textColor="@color/White"
        android:padding="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>