<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/colorPrimary"
    android:layout_height="match_parent"
    tools:context=".StudentLogin">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="300dp"
        android:layout_height="180dp"
        android:layout_marginTop="70dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/student_id"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/centennial_library" />

    <EditText
        android:id="@+id/student_id"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/student_id"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/student_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <EditText
        android:id="@+id/student_password"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:ems="10"
        android:hint="@string/passwordstu"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/linear"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/student_id" />

    <LinearLayout
        android:id="@+id/linear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="67dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="68dp"
        android:gravity="center"
        android:showDividers="middle"
        android:divider="@drawable/empty_divider"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/student_password">

        <Button
            android:id="@+id/btn_stu_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:textColor="@color/White"
            android:padding="15dp"
            android:text="@string/student_sign_up" />

        <Button
            android:id="@+id/btn_stu_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:textColor="@color/White"
            android:padding="15dp"
            android:text="@string/student_login" />
    </LinearLayout>

    <Button
        android:id="@+id/librarian_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/librarian_login_sign_up"
        android:background="@color/colorAccent"
        android:textColor="@color/White"
        android:padding="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linear" />


</androidx.constraintlayout.widget.ConstraintLayout>